<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4B566D"
    tools:context="com.medarkive.Main.SignUp" >

    <Button
        android:id="@+id/back"
        android:layout_width="fill_parent"
        android:layout_height="100px"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#3469AF"
        android:clickable="true"
        android:gravity="start|center_vertical"
        android:paddingLeft="90px"
        android:text="Back"
        android:textColor="#FFFFFF"
        android:textSize="44px" />
    <ImageView
        android:id="@+id/back_button"
        android:layout_width="67px"
        android:layout_height="96px"
        android:layout_above="@+id/name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_bck_arrow" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="80px"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="40px"
        android:layout_marginLeft="40px"
        android:layout_below="@+id/name"
        android:layout_marginTop="50px"
        android:background="#8589A3"
        android:ems="10"
        android:hint="@string/enter_username"
        android:inputType="textEmailAddress"
        android:padding="20px"
        android:singleLine="true"
        android:textColor="#FFFFFF"
        android:textColorHint="#CBC9D9"
        android:textSize="32px" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="80px"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/back"
        android:layout_marginTop="50px"
        android:layout_marginRight="40px"
        android:layout_marginLeft="40px"
        android:background="#8589A3"
        android:ems="10"
        android:hint="@string/enter_name"
        android:padding="20px"
        android:singleLine="true"
        android:textColor="#FFFFFF"
        android:textColorHint="#CBC9D9"
        android:textSize="16sp" >
         <requestFocus />
        </EditText>

    <EditText
        android:id="@+id/type"
        android:layout_width="fill_parent"
        android:layout_height="80px"
        android:layout_marginRight="40px"
        android:layout_marginLeft="40px"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/email"
        android:background="#8589A3"
        android:ems="10"
        android:layout_marginTop="50px"
        android:hint="@string/type"
        android:padding="20px"
        android:singleLine="true"
        android:textColor="#FFFFFF"
        android:textColorHint="#CBC9D9"
        android:textSize="32px" />

    <Button
        android:id="@+id/submit_register"
        android:layout_width="fill_parent"
        android:layout_height="100px"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/type"
        android:layout_marginRight="40px"
        android:layout_marginLeft="40px"
        android:background="#60C5BC"
        android:layout_marginTop="50px"
        android:clickable="true"
        android:text="Enter"
        android:textColor="#FFFFFF"
        android:textSize="44px" />

</RelativeLayout>